src/test/ui/parser/keyword-ref-as-identifier.stderr
error: expected identifier, found `=`
  --> $DIR/keyword-ref-as-identifier.rs:14:13
   |
LL |     let ref = "foo"; //~ error: expected identifier, found `=`
   |             ^ expected identifier

error: aborting due to previous error

