src/test/ui/parser/keyword-ref-as-identifier.rs
// compile-flags: -Z parse-only

fn main() {
    let ref = "foo"; //~ error: expected identifier, found `=`
}
